Bug 1028415 - Cache thread gets stuck in CacheFileIOManager::OverLimitEvictionInternal loop. r=honzab, a=sledru